refactor(services-controller): update logic and nomenclature of functions for better performance